[api] fix swagger dockerfile
